# umaprs

./: .gitignore  Cargo.toml  README.md
data/: aml_01pct_labels.csv  aml_1pct_labels.csv  crabs_data.csv  crabs_labels.csv  crabs_metadata.csv
docs/: BUILD_ANNEMBED.md  COMPARISON.md  COMPARISON_WITH_UWOT.md  FINAL_COMPARISON.md  FINAL_STATUS.md  HONEST_FINAL_STATUS.md  IMPROVEMENTS.md  REPORT.md  SUCCESS.md  turboquant.md
examples/: bench.rs  compressed.rs  crabs.rs  cyto_all_final.rs  cyto_final.rs  digits_compare.rs  gpu_nvrtc.rs  gpu_test.rs  memory_budget.rs  rare_pop.rs  tsne_compare.rs
scripts/: bench_uwot.R  bench_uwot2.R  compare_all_three.R  compare_all_three_final.R  compare_crabs_uwot.R  compare_quality.R  compare_rust_uwot.R  compare_with_uwot.R  compressed_compare.R  crabs_three_way.R  cyto_all.R  cyto_all_final.R  cyto_bench.R  cyto_clean.R  cyto_final.R  cyto_knn_compare.R  digits_bench.R  digits_compare.R  highd_compare.R  memory_budget.R  prepare_crabs_data.R  rare_pop.R  visualize_comparison.R  visualize_results.R
src/: codebook.rs  compressed.rs  fuzzy.rs  gpu.rs  hnsw.rs  kdtree.rs  kernels.cu  knn.rs  lib.rs  main.rs  model.rs  optimize.rs  quadtree.rs  quantize.rs  sparse.rs  spectral.rs  tq4_dot.ptx  tsne.rs
tests/: integration_test.rs
